--- a/index.html
+++ b/index.html
@@ -11,22 +11,6 @@
 rel="stylesheet">
 </head>
 <body>
-<section class="dispositivos">
-<h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
-<ul class="dispositivos__lista">
-<li>
-<img src="img/tv.png" alt="Ícone de televisão">
-<h3 class="lista__item"></h3>
-</li>
-<li>
-<img src="img/computador.png" alt="Ícone de computador">
-<h3 class="lista__item"></h3>
-</li>
-<li>
-<img src="img/celular.png" alt="Ícone de celular">
-<h3 class="lista__item"></h3>
-</li>
-</ul>
 </section>
     <section class="principal container">
         <div class="container__caixa">
@@ -85,7 +69,22 @@ rel="stylesheet">
             </li>
         </ul>
     </section>
-
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+        <li>
+        <img src="img/tv.png" alt="Ícone de televisão">
+        <h3 class="lista__item"></h3>
+        </li>
+        <li>
+        <img src="img/computador.png" alt="Ícone de computador">
+        <h3 class="lista__item"></h3>
+        </li>
+        <li>
+        <img src="img/celular.png" alt="Ícone de celular">
+        <h3 class="lista__item"></h3>
+        </li>
+        </ul>Disponível nos seus dispositivos favoritos
     <footer class="rodape">
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
         <ul class="rodape__lista">
